; ModuleID = '/home/carl/AnghaBench/vlc/modules/audio_output/extr_coreaudio_common.c_lock_unlock.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/audio_output/extr_coreaudio_common.c_lock_unlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aout_sys_common = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@os_unfair_lock_lock = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.aout_sys_common*)* @lock_unlock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lock_unlock(%struct.aout_sys_common* %0) #0 {
  %2 = alloca %struct.aout_sys_common*, align 8
  store %struct.aout_sys_common* %0, %struct.aout_sys_common** %2, align 8
  %3 = load i32, i32* @os_unfair_lock_lock, align 4
  %4 = call i64 @likely(i32 %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %11

6:                                                ; preds = %1
  %7 = load %struct.aout_sys_common*, %struct.aout_sys_common** %2, align 8
  %8 = getelementptr inbounds %struct.aout_sys_common, %struct.aout_sys_common* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 1
  %10 = call i32 @os_unfair_lock_unlock(i32* %9)
  br label %16

11:                                               ; preds = %1
  %12 = load %struct.aout_sys_common*, %struct.aout_sys_common** %2, align 8
  %13 = getelementptr inbounds %struct.aout_sys_common, %struct.aout_sys_common* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = call i32 @vlc_mutex_unlock(i32* %14)
  br label %16

16:                                               ; preds = %11, %6
  ret void
}

declare dso_local i64 @likely(i32) #1

declare dso_local i32 @os_unfair_lock_unlock(i32*) #1

declare dso_local i32 @vlc_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
